--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -3,5 +3,7 @@
   "login_screen_subtitle": "Welcome back",
   "login_screen_input_email": "Email",
   "login_screen_input_password": "Password",
-  "login_screen_forgot_password_label": "Forgot Password"
+  "login_screen_forgot_password_label": "Forgot Password",
+  "login_screen_have_account": "Don’t have an account? ",
+  "login_screen_sign_up": "Sign up here"
 }
